[package]
name = "test-strategy"
version = "0.3.0"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/test-strategy"
documentation = "https://docs.rs/test-strategy/"
keywords = ["macro", "testing", "proptest"]
categories = ["development-tools::testing"]
description = "Procedural macro to easily write higher-order strategies in proptest."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.13", features = ["visit", "full", "extra-traits"] }
quote = "1.0.26"
proc-macro2 = "1.0.55"
structmeta = "0.2.0"

[dev-dependencies]
proptest = "1.1.0"
trybuild = "1.0.80"
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }
