[package]
name = "test-strategy"
version = "0.4.1"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/test-strategy"
documentation = "https://docs.rs/test-strategy/"
keywords = ["macro", "testing", "proptest"]
categories = ["development-tools::testing"]
description = "Procedural macro to easily write higher-order strategies in proptest."
edition = "2021"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.68", features = ["visit", "full", "extra-traits"] }
quote = "1.0.36"
proc-macro2 = "1.0.86"
structmeta = "0.3.0"

[dev-dependencies]
proptest = "1.6.0"
trybuild = "1.0.96"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
anyhow = "1.0.97"
googletest = "0.14.0"
