[package]
name = "test-strategy"
version = "0.4.4"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/test-strategy"
documentation = "https://docs.rs/test-strategy/"
keywords = ["macro", "testing", "proptest"]
categories = ["development-tools::testing"]
description = "Procedural macro to easily write higher-order strategies in proptest."
edition = "2021"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
structmeta = "0.3.0"
derive-ex = "0.1.8"

[dev-dependencies]
proptest = "1.6.0"
trybuild = "1.0.104"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
anyhow = { workspace = true }
googletest = "0.14.0"


[workspace]
members = ["codegen"]

[workspace.dependencies]
syn = { version = "2.0.100", features = ["visit", "full", "extra-traits"] }
quote = "1.0.40"
proc-macro2 = "1.0.94"
anyhow = "1.0.97"
